css/styles.css
@import url(http://fonts.googleapis.com/css?family=Inconsolata|Lobster|Lato);

* { box-sizing: border-box; }

html, body {
    background-color: white;
    height: 100%;
    font-family: Lato, sans-serif;
}

body {
    color: #333;
    text-shadow: rgba(0, 0, 0, .1) 0px 1px 1px;
}

button:active {
    -webkit-transform: translatey(1px);
    transform: translatey(1px);
}

#topbar {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    padding: 0 6px;
    height: 36px;
    line-height: 36px;
    box-shadow: 0 0 4px rgba(0, 0, 0, .6);
    background-color: white;
    background-image: linear-gradient(to bottom, #FFFFFF 0%, #E2DEDE 100%); /* W3C */
    background-image: -webkit-linear-gradient(top, #FFFFFF 0%, #E2DEDE 100%); /* Safari5.1+ */
    background-image: -moz-linear-gradient(top, #FFFFFF 0%, #E2DEDE 100%); /* FF3.6+ */
    background-image: -o-linear-gradient(top, #FFFFFF 0%, #E2DEDE 100%); /* Opera 11.10+ */
    background-image: -ms-linear-gradient(top, #FFFFFF 0%, #E2DEDE 100%); /* IE10+ */
    z-index: 10;
}

#topbar .right {
    float: right;
}

#topbar .left {
    float: left;
    font-family: Lobster, cursive;
}

#topbar button {
    height: 36px;
    width: 36px;
    border: none;
    background: none;
    cursor: pointer;
}

.popup {
    position: absolute;
    top: -80%;
    right: 120px;
    border-radius: 0 0 6px 6px;
    width: 50%;
    min-height: 120px;
    max-height: 80%;
    padding: 12px;
    opacity: 0;
    transition: all .5s ease;
    overflow-y: auto;
    background-color: white;
    background-image: linear-gradient(to bottom, #FFFFFF 0%, #E2DEDE 100%); /* W3C */
    background-image: -webkit-linear-gradient(top, #FFFFFF 0%, #E2DEDE 100%); /* Safari5.1+ */
    background-image: -moz-linear-gradient(top, #FFFFFF 0%, #E2DEDE 100%); /* FF3.6+ */
    background-image: -o-linear-gradient(top, #FFFFFF 0%, #E2DEDE 100%); /* Opera 11.10+ */
    background-image: -ms-linear-gradient(top, #FFFFFF 0%, #E2DEDE 100%); /* IE10+ */
}

.popup.active {
    top: 0;
    opacity: .95;
    box-shadow: 0 20px 150px rgba(0, 0, 0, .6);
}

.popup h2 {
    margin: 0 0 12px 0;
}

.popup .close {
    position: absolute;
    top: 6px;
    right: 6px;
    display: inline-block;
    border: none;
    background: none;
    font-family: Inconsolata;
    color: #BBB;
}

.popup .close:after {
    content: "×ESC";
}

.popup .close:hover,
.popup .close:focus {
    color: #F77;
}

#app-container {
    width: 100%;
    height: 100%;
    padding-top: 37px;
}

.err {
    background-color: #FCC;
}

#input-editor, #output-editor {
    height: 100%;
    padding: 3px;
    font: 20px 'Inconsolata', monospace;
}

#input-editor {
    width: 70%;
    float: left;
}

#output-editor {
    width: 30%;
    float: right;
}

#app-container .result:before {
    content: attr(data-label);
    opacity: .4;
}

#app-container .result {
    line-height: 30px;
}

#app-container .result {
    height: 30px;
}

.cursor-hl {
    background-color: #DEF;
}

